Fix jumping text size

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -9,6 +9,7 @@ $pad: 20px;
 body {
     font-size: 3vmin;
     margin: 0;
+    text-size-adjust: 100%;
 }
 
 .menu {
